trunk/Archive2/f9/80523ba141b4b2/output
main.cpp:8:5: error: no matching function for call to 'g'
    g(f);
    ^
main.cpp:5:6: note: candidate function [with Ts = <>] not viable: no overload of 'f' matching 'void (*)()' for 1st argument
void g(void(*)(Ts...)) {}
     ^
1 error generated.
